# MathViz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pypi-publish.yml  tauri-release.yml
RealGithub/: .gitignore  README.md  pyproject.toml
RealGithub/.github/workflows/: tauri-release.yml
RealGithub/editor/: package.json  tailwind.config.js  tsconfig.json
RealGithub/editor/src/: index.css
RealGithub/editor/src-tauri/: .taurignore
RealGithub/editor/src-tauri/src/: lib.rs  main.rs
RealGithub/editor/src-tauri/src/commands/: file.rs  git.rs  mod.rs
RealGithub/editor/src-tauri/src/lsp/: client.rs  mod.rs
RealGithub/editor/src/components/: index.ts
RealGithub/editor/src/components/Editor/: Editor.tsx
RealGithub/editor/src/components/FileTree/: FileTree.tsx  index.ts
RealGithub/editor/src/components/Layout/: TabBar.tsx
RealGithub/editor/src/components/Sidebar/: GitPanel.tsx  Search.tsx
RealGithub/editor/src/components/StatusBar/: StatusBar.tsx
RealGithub/editor/src/components/Terminal/: index.ts
RealGithub/editor/src/hooks/: useFileSystem.ts  useKeyboardShortcut.ts
RealGithub/editor/src/stores/: compilerStore.ts  fileStore.ts  index.ts
RealGithub/editor/src/styles/: globals.css
RealGithub/editor/src/types/: index.ts
RealGithub/editor/src/utils/: helpers.ts  themes.ts
RealGithub/examples/: circle_animation.mvz  circle_animation.py  hello_world.mvz  oop_demo.mvz  venn_diagram.mvz
RealGithub/examples/multimodule/: README.md  animations.mviz  geometry.mviz
RealGithub/src/mathviz/: __main__.py  cli.py  formatter.py  repl.py
RealGithub/src/mathviz/compiler/: __init__.py  ast_nodes.py  const_evaluator.py  jit_optimizer.py  lexer.py  parallel_analyzer.py  purity_analyzer.py  tokens.py  type_checker.py
RealGithub/src/mathviz/lsp/: __init__.py  diagnostics.py
RealGithub/src/mathviz/runtime/: __init__.py  test_runner.py
RealGithub/src/mathviz/runtime/stdlib/: __init__.py  random.py
RealGithub/src/mathviz/utils/: errors.py
RealGithub/tests/: conftest.py
RealGithub/tests/integration/: test_end_to_end.py  test_real_programs.py
RealGithub/tests/integration/test_modules/: test_multifile.py
RealGithub/tests/unit/: __init__.py  test_formatter.py  test_fstring.py  test_jit_optimizer.py  test_lexer.py  test_memory_optimizer.py  test_repl.py
RealGithub/tests/unit/lsp/: __init__.py  test_completions.py
assets/: app.js  prism-mviz.js  styles.css
docs/: cli.html  compiler-internals.html  editor.html  getting-started.html  language-reference.html  modules.html  scenes.html
editor/: index.html  package-lock.json  package.json  vite.config.ts
editor/src/: App.tsx  main.tsx
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: .gitkeep
editor/src-tauri/media/videos/da/720p30/partial_movie_files/AnimateTest/: partial_movie_file_list.txt
editor/src-tauri/media/videos/da/720p30/partial_movie_files/HelloCircle/: partial_movie_file_list.txt
editor/src-tauri/media/videos/da/720p30/partial_movie_files/SimpleDemo/: partial_movie_file_list.txt
editor/src-tauri/src/: main.rs
editor/src-tauri/src/commands/: compiler.rs  lsp.rs  terminal.rs
editor/src/components/Editor/: index.ts
editor/src/components/Layout/: ActivityBar.tsx  MainLayout.tsx  Resizer.tsx  index.ts
editor/src/components/Preview/: ManimPreview.tsx  index.ts
editor/src/components/Sidebar/: DebugPanel.tsx  Explorer.tsx  Sidebar.tsx  index.ts
editor/src/components/StatusBar/: index.ts
editor/src/components/Terminal/: Terminal.tsx
editor/src/hooks/: index.ts  useEditor.ts  useLSP.ts  useResizable.ts  useTerminal.ts
editor/src/stores/: compilerStore.ts  editorStore.ts  gitStore.ts  layoutStore.ts  previewStore.ts  terminalStore.ts
editor/src/utils/: index.ts  mathviz-language.ts
examples/: advanced.html  comprehensions_and_iterators.mvz  fibonacci.mvz  gallery.html  index.html  set_operations.mvz
examples/multimodule/: colors.mviz  main.mviz
media/videos/circle_animation/480p15/partial_movie_files/CircleAnimation/: partial_movie_file_list.txt
src/mathviz/: __init__.py  cli.py  formatter.py  repl.py
src/mathviz/compiler/: __init__.py  ast_nodes.py  call_graph.py  codegen.py  complexity_analyzer.py  const_evaluator.py  const_fold.py  diagnostics.py  doc_generator.py  jit_optimizer.py  lexer.py  linter.py  memory_optimizer.py  module_loader.py  operators.py  parallel_analyzer.py  parser.py  purity_analyzer.py  tokens.py  type_checker.py  vectorizer.py
src/mathviz/lsp/: __main__.py  analyzer.py  completions.py  diagnostics.py  formatting.py  server.py  symbols.py
src/mathviz/runtime/: __init__.py  iterators.py  math_ops.py  test_runner.py
src/mathviz/runtime/stdlib/: __init__.py  async_helpers.py  collections.py  math.py  random.py  string.py  time.py
src/mathviz/utils/: __init__.py  diagnostics.py  errors.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analyzer_integration.py  test_end_to_end.py  test_full_pipeline.py  test_real_programs.py
tests/integration/test_modules/: __init__.py  test_multifile.py
tests/unit/: test_codegen.py  test_comprehensions.py  test_const.py  test_const_fold.py  test_formatter.py  test_fstring.py  test_generics.py  test_iterators.py  test_jit_optimizer.py  test_lexer.py  test_memory_optimizer.py  test_module_loader.py  test_oop.py  test_parallel_analyzer.py  test_parser.py  test_pattern_matching.py  test_repl.py  test_runtime.py  test_tuple_optional_result.py
tests/unit/lsp/: test_analyzer.py  test_completions.py  test_diagnostics.py
vscode-mathviz/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json
vscode-mathviz/snippets/: mathviz.json
vscode-mathviz/syntaxes/: mathviz.tmLanguage.json
