[project]
name = "mathviz"
version = "0.1.7"
description = "A domain-specific programming language for mathematical animations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MathViz Team" }
]
keywords = ["mathematics", "animation", "manim", "dsl", "compiler", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numba>=0.60.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
manim = [
    "manim>=0.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ci = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
watch = [
    "watchdog>=4.0.0",  # For efficient file watching (optional)
]
lsp = [
    "pygls>=1.2.0", # Python Language Server library
    "lsprotocol>=2023.0.0", # LSP type definitions
]
all = [
    "manim>=0.18.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "watchdog>=4.0.0",
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
]

[project.scripts]
mathviz = "mathviz.cli:main"
mvz = "mathviz.cli:main"
mathviz-lsp = "mathviz.lsp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mathviz"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM102", # nested if statements - sometimes more readable
    "SIM103", # return boolean expression directly - readability preference
    "SIM108", # ternary instead of if-else - readability preference
    "SIM116", # use dict instead of if-elif - sometimes less readable
    "ARG001", # unused function arguments - common in callbacks/visitor patterns
    "ARG002", # unused method arguments - common in visitor patterns
    "B007",   # loop variable not used - often intentional for counting
    "B018",   # useless expression - sometimes intentional for side effects
    "B024",   # abstract base class without abstract methods
    "B904",   # raise without from - acceptable in simple cases
    "E402",   # module level import not at top - sometimes necessary
    "E721",   # type comparison with == - sometimes clearer than isinstance
    "E741",   # ambiguous variable name (l) - common for line/label
    "F401",   # imported but unused - may be re-exported
    "F402",   # import shadowed by loop variable - intentional override
    "F811",   # redefinition of unused name - overloads pattern
    "UP007",  # X | Y for type annotations - Union is sometimes clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001", "ARG002",  # Unused arguments are common in test fixtures
    "F405", "F403",      # Star imports used for convenience in tests
    "E741",              # Ambiguous variable name (l for line)
    "SIM102",            # Nested if statements OK in tests for readability
    "B007",              # Loop variable not used (common in counting loops)
    "F401",              # Unused imports in test setup
]
"src/mathviz/runtime/stdlib/__init__.py" = ["F403", "F405"]  # Star imports for re-export
"src/mathviz/runtime/__init__.py" = ["F403", "F405"]  # Star imports for runtime

[tool.ruff.lint.isort]
known-first-party = ["mathviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = false
strict_optional = false
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# Relax strictness for now - many pre-existing type errors
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "mathviz.runtime.*",
    "mathviz.cli",
    "mathviz.repl",
    "mathviz.lsp.*",
    "mathviz.compiler.*",
    "mathviz.formatter",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/mathviz"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
