[package]
name = "mathviz-editor"
version = "0.1.6"
description = "Cross-platform code editor for MathViz"
authors = ["MathViz Team"]
license = "MIT"
repository = "https://github.com/mathviz/editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "sync", "process", "io-util"] }
portable-pty = "0.8"
git2 = "0.18"
notify = "6.1"
notify-debouncer-mini = "0.4"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
